components/post/post.module.css
.container {
  gap: 30px;
  display: flex;
  align-items: center;
  margin-bottom: 25px;
  padding-bottom: 25px;
  border-bottom: 1px solid var(--postBorder);
}

.textContainer {
  flex: 3;
  display: flex;
  flex-direction: column;
  word-break: break-word;
}

.details {
  display: flex;
  font-size: 14px;
  margin: 0 0 15px 0;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.authorAvatar {
  display: flex;
  align-items: center;
}

.authorAvatar img {
  width: 24px;
  height: 24px;
  object-fit: cover;
  border-radius: 50%;
}

.authorName {
  font-weight: 600;
  margin: 1px 0 0 10px;
  color: var(--featuredAuthorName);
}

.postDate {
  display: flex;
  align-items: center;
  color: var(--featuredModifiedDate);
}

.postHeader {
  font-size: 20px;
  font-weight: 700;
  line-height: 100%;
  margin-bottom: 10px;
  color: var(--postHeader);
}

.postDesc {
  margin: 0;
  font-size: 16px;
  line-height: 1.5;
  color: var(--postDesc);
}

.footer {
  display: flex;
  font-size: 14px;
  margin-top: 10px;
  align-items: center;
  justify-content: space-between;
}

.categories {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.categories ul {
  gap: 5px;
  margin: 0;
  padding: 0;
  display: flex;
  list-style: none;
  align-items: center;
}

.categories a {
  font-size: 13px;
  padding: 2px 8px;
  color: var(--postCategory);
  border-radius: 100px;
  text-decoration: none;
  text-transform: capitalize;
  background-color: var(--postCategoryBg);
}

.footerIcons {
  font-size: 15px;
  cursor: pointer;
  color: var(--postIcons);
}

.imageContainer {
  flex: 1;
  z-index: -1;
  height: 112px;
  display: none;
  position: relative;
  align-items: center;
  border-radius: 10px;
  justify-content: end;
}

.image {
  height: 112px;
  max-width: 100%;
  object-fit: cover;
  border-radius: 10px;
}

@media (min-width: 576px) {
}

@media (min-width: 768px) {
  .title {
    font-size: 34px;
    line-height: 120%;
    text-align: left;
  }
  .imageContainer {
    display: flex;
  }
}

@media (min-width: 992px) {
}

@media (min-width: 1200px) {
  .postHeader {
    font-size: 21px;
    line-height: 140%;
  }
}

